Fixed alignment of posts

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,7 +20,6 @@ $code-background-color-light: $table-header-bg-color;
 .wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 }
 
 .site-title {
